@@ -10,3 +10,12 @@ Sept 15, 2018, 1:23AM PST
    - Initial build
    - First stable version
    - Implemented all standard linked-list operations
+
+Build 2.0:
+Sept 15, 2018, 2:49AM PST
+
+   - Fixed all index out-of-bounds errors, particularly in the search functions.
+   - [FEATURE UPDATE] Added Continuous Input Mode: Now data can be added continuously to the list with new nodes being created dynamically at run-time. 
+   Note: CIM requires the number of entries in advance that will be continuously input.
+   - UI Changes
+   - Minor bug fixes
